サンプルコードに文字列を追加

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -15,6 +15,9 @@
 入力した日本語っぽいコードを、ビジュアルデザイン用のプログラミング言語Processing.jsに変換して実行します(SoraMame.ps.js)。
 <hr />
 <textarea id="source" cols="80" rows="20">
+「あいうえお」
+『１２３４５』
+
 ◎設定する {
   {w:250, h:250}のサイズ
   {ミリ秒:20}のフレーム
