単語切り出しをブラッシュアップ ただし、":"(コロン)を記号として認識できない

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -15,8 +15,8 @@
 入力した日本語っぽいコードを、ビジュアルデザイン用のプログラミング言語Processing.jsに変換して実行します(SoraMame.ps.js)。
 <hr />
 <textarea id="source" cols="80" rows="20">
-「あいうえお」
-『１２３４５』
+文字列a = 「あいうえお」
+文字列100 = 『１２３４５』
 
 ◎設定する {
   {w:250, h:250}のサイズ
