行末の検出を、すべて正規表現化 ただし、「。」がWordになってしまう。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -15,13 +15,13 @@
 入力した日本語っぽいコードを、ビジュアルデザイン用のプログラミング言語Processing.jsに変換して実行します(SoraMame.ps.js)。
 <hr />
 <textarea id="source" cols="80" rows="20">
-文字列a = 「あいうえお」
-文字列100 = 『１２３４５』
+文字列a = 「あいうえお」。文字列100 = 『１２３４５』
 
+//コメント文
 ◎設定する {
   {w:250, h:250}のサイズ
   {ミリ秒:20}のフレーム
-  {色:0}の背景
+  {色:0}の背景	//コメント文２
 }
 
 ◎描画する {
