テキストエリアの文字を、そのまま表示

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -104,7 +104,7 @@ function yyerror(str){
 function soramame_yacc(){
   var Esource = document.getElementById("source");
   sora = new soramame(Esource.value);
-  sora.debug("hello soramame_yacc");
+  sora.debug(Esource.value);
 }
 //-->
 </script>
