ライセンス設定。 引数例を、日本語っぽく変更

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -19,13 +19,13 @@
 
 //コメント文
 ◎設定する {
-  {w:250, h:250}のサイズ
+  {幅:250, 高さ:250}のサイズ
   {ミリ秒:20}のフレーム
   {色:0}の背景	//コメント文２
 }
 
 ◎描画する {
-  {x:,マウスx, y:マウスy}に{w:10, h:10}のマル
+  {x:,マウスx, y:マウスy}に{幅:10, 高さ:10}のマル
 }
 </textarea><br />
 <input type="button" value="実行" onclick="soramame_exec()" />
