parseの呼び出し方を、ためしに変更。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -102,9 +102,18 @@ function yyerror(str){
 }
 
 function soramame_parse(){
-  var Esource = document.getElementById("source");
-  sora = new soramame(Esource.value);
-  sora.debug(Esource.value);
+
+  //yyyBuffer = document.compiledtext.one.value;
+  //var script = yyparse();
+  //setAnswer(script);
+  
+  yyyBuffer = document.getElementById("source");
+  var script = yyparse();
+  sora.debug(script);
+
+  //var Esource = document.getElementById("source");  
+  //sora = new soramame(Esource.value);
+  //sora.debug(Esource.value);
 }
 //-->
 </script>
