parseの追加に合わせて、サンプル文を追加

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -18,6 +18,8 @@
 1000
 文字列a
 「あいうえお」
+//コメント
+100＋２００＊３
 </textarea><br />
 <input type="button" value="字句解析" onclick="soramame_lex()" />
 <input type="button" value="構文解析" onclick="soramame_parse()" />
