代入文(assign)の定義とサンプル文を追加

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -19,7 +19,7 @@
 文字列a
 「あいうえお」
 //コメント
-100＋２００＊３
+変数あ＝１００＋２００＊３
 </textarea><br />
 <input type="button" value="字句解析" onclick="soramame_lex()" />
 <input type="button" value="構文解析" onclick="soramame_parse()" />
