関数呼び出し(funcall)を追加。 　次の4つのパターンに対応している。
｛半径：100｝のマル
｛位置：100｝に｛半径：200｝のマル

｛幅：100、高さ：200｝のマル
｛X：100、Y：200｝に｛幅：10、高さ：20｝のマル

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -20,6 +20,12 @@
 「あいうえお」
 //コメント
 変数あ＝１００＋２００＊３
+
+｛半径：100｝のマル
+｛位置：100｝に｛半径：200｝のマル
+
+｛幅：100、高さ：200｝のマル
+｛X：100、Y：200｝に｛幅：10、高さ：20｝のマル
 </textarea><br />
 <input type="button" value="字句解析" onclick="soramame_lex()" />
 <input type="button" value="構文解析" onclick="soramame_parse()" />
