--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <title>SoraMame Script</title>
 <script type="text/javascript" src="parse.js"></script>
+<script type="text/javascript" src="lib_command.js"></script>
 <script type="text/javascript" src="soramame.js"></script>
 </head>
 
