parse.js からも呼べるように、lib_commandオブジェクトをグローバル変数に割り当てる。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -45,6 +45,9 @@ var sora;
 var yylval = '';
 var variables = {};
 
+//コマンド置換辞書
+var commands = new lib_command();
+//alert(commands.dic);
 
 function soramame_exec(){
   var Esource = document.getElementById("source");
