埋め込んでおいたテスト用コードを整理。
式(expr)の中に関数を入れられるようにした。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -16,11 +16,9 @@
 入力した日本語っぽいコードを、ビジュアルデザイン用のプログラミング言語Processing.jsに変換して実行します(SoraMame.ps.js)。
 <hr />
 <textarea id="source" cols="80" rows="20">
-1000
-文字列a
-「あいうえお」
 //コメント
 変数あ＝１００＋２００＊３
+変数あ＝１００＋２００＊｛半径：100｝のマル
 
 ｛半径：100｝のマル
 ｛位置：100｝に｛半径：200｝のマル
