--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -5,17 +5,25 @@
 <head>
 <meta charset="UTF-8">
 <title>SoraMame Script</title>
-<script type="text/javascript" src="parse.js"></script>
-<script type="text/javascript" src="lib_command.js"></script>
-<script type="text/javascript" src="soramame.js"></script>
+	<script type="text/javascript" src="./processing-1.3.6.js"></script> 
+	<script type="text/javascript" src="./parse.js"></script>
+	<script type="text/javascript" src="./lib_command.js"></script>
+	<script type="text/javascript" src="./soramame.js"></script>
 </head>
 
 
 <body>
-<h1>日本語っぽいプログラミング言語：SoraMame Script(そら豆スクリプト)</h1>
-入力した日本語っぽいコードを、ビジュアルデザイン用のプログラミング言語Processing.jsに変換して実行します(SoraMame.ps.js)。
+<h1>SoraMame Script(そら豆スクリプト) - 日本語っぽいプログラミング言語</h1>
+日本語っぽいコードを、ビジュアルデザイン用のプログラミング言語Processing.jsに変換して実行します(SoraMame.ps.js)。
 <hr />
-<textarea id="source" cols="80" rows="20">
+
+<table width="960px" heiht="320px" bgcolor="#eeeeee"><tbody><tr> 
+  <td width="320px" height="320px" bgcolor="white"> 
+		<canvas id="canvas0" width="320px" height="320px"></canvas> 
+  </td>	
+  <td>
+  <form name="compiledtext" id="compiledtext" onsubmit="return main()">
+	<textarea id="source" cols="80" rows="20">
 //コメント
 変数あ＝１００＋２００＊３
 変数あ＝１００＋２００＊｛半径：100｝のマル
@@ -25,10 +33,15 @@
 
 ｛幅：100、高さ：200｝のマル
 ｛X：100、Y：200｝に｛幅：10、高さ：20｝のマル
-</textarea><br />
-<input type="button" value="字句解析" onclick="soramame_lex()" />
-<input type="button" value="構文解析" onclick="soramame_parse()" />
-<input type="button" value="実行" onclick="soramame_exec()" />
+	</textarea><br />
+	<input type="button" value="字句解析" onclick="soramame_lex()" />
+	<input type="button" value="構文解析" onclick="soramame_parse()" />
+	<input type="button" value="実行" onclick="soramame_exec()" />
+	<input type="button" value="停止" onclick="soramame_stop()" />
+  </form>
+  </td>
+  </tr></tbody></table>  
+<hr>
 <h2>結果</h2>
 <pre id="screen"></pre>
 </body>
@@ -42,16 +55,35 @@
 var sora;
 var yylval = '';
 var variables = {};
+var Pjs;
 
 //コマンド置換辞書
 var commands = new lib_command();
-//alert(commands.dic);
+
 
 function soramame_exec(){
+  //var Esource = document.getElementById("source");
+  //sora = new soramame(Esource.value);
+  //yyparse();
+  
   var Esource = document.getElementById("source");
   sora = new soramame(Esource.value);
+  var script = yyparse();
+  sora.debug(script);
 
-  yyparse();
+  soramame_stop();
+　　var canvas = document.getElementById('canvas0');
+  try{
+    Pjs = new Processing(canvas, script);
+  }catch(e){
+    alert(e);
+  }
+　　return false;
+}
+
+function soramame_stop(){
+    if (Pjs)
+      Pjs.exit();
 }
 
 
