--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -24,15 +24,10 @@
   <td>
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
-//コメント
-変数あ＝１００＋２００＊３
-変数あ＝１００＋２００＊｛半径：100｝のマル
-
-｛半径：100｝のマル
-｛位置：100｝に｛半径：200｝のマル
-
-｛幅：100、高さ：200｝のマル
-｛X：100、Y：200｝に｛幅：10、高さ：20｝のマル
+//基本的な図形
+｛幅：320、高さ：320｝のサイズ
+｛X：100、Y：100｝に｛幅：50、高さ：50｝のマル
+｛始点X：0、始点y：0｝に｛始点X：100、始点y：100｝の直線
 	</textarea><br />
 	<input type="button" value="字句解析" onclick="soramame_lex()" />
 	<input type="button" value="構文解析" onclick="soramame_parse()" />
@@ -54,18 +49,11 @@
 <!--
 var sora;
 var yylval = '';
-var variables = {};
 var Pjs;
-
-//コマンド置換辞書
-var commands = new lib_command();
+var commands = new lib_command();	//コマンド置換辞書
 
 
 function soramame_exec(){
-  //var Esource = document.getElementById("source");
-  //sora = new soramame(Esource.value);
-  //yyparse();
-  
   var Esource = document.getElementById("source");
   sora = new soramame(Esource.value);
   var script = yyparse();
