コマンドリファレンスのフォルダとファイルを追加
クラスとメソッド呼び出しの記述用記号（●◎）を助詞から記号に移動

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -30,14 +30,14 @@
 ｛始点X：0、始点y：0｝に｛始点X：100、始点y：100｝の直線
 	</textarea><br />
 	<input type="button" value="字句解析" onclick="soramame_lex()" />
-	<input type="button" value="構文解析" onclick="soramame_parse()" />
+	<input type="button" value="変換" onclick="soramame_parse()" />
 	<input type="button" value="実行" onclick="soramame_exec()" />
 	<input type="button" value="停止" onclick="soramame_stop()" />
   </form>
   </td>
   </tr></tbody></table>  
 <hr>
-<h2>結果</h2>
+<h2>変換結果</h2>
 <pre id="screen"></pre>
 </body>
 
