システム変数をコマンド辞書で変換。 ただし、システム変数の末尾にカッコが入ってしまう。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -51,7 +51,7 @@ var sora;
 var yylval = '';
 var Pjs;
 var commands = new lib_command();	//コマンド置換辞書
-var system_vars = new lib_global_vars();	//システム変数の置換辞書
+//var system_vars = new lib_global_vars();	//システム変数の置換辞書
 
 function soramame_exec(){
   var Esource = document.getElementById("source");
