システム変数の変換のために、コードを調整。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -55,7 +55,7 @@
 var sora;
 var yylval = '';
 var Pjs;
-var commands = new lib_command();	//コマンド置換辞書
+var lib_dic = new lib_dic();	//コマンド置換辞書
 
 function soramame_exec(){
   var Esource = document.getElementById("source");
