--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -30,10 +30,10 @@
 }
 
 ---くり返し描画する{
-  {x:マウスX, y:マウスY}に{幅:10, 高さ:10}のマル
+  {x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のマル
 }
 	</textarea><br />
-	<input type="button" value="字句解析" onclick="soramame_lex()" />
+	<!--<input type="button" value="字句解析" onclick="soramame_lex()" /> -->
 	<input type="button" value="テスト" onclick="soramame_parse()" />
 	<input type="button" value="うごかす" onclick="soramame_exec()" />
 	<input type="button" value="とめる" onclick="soramame_stop()" />
