--- a/sample/SoraMame_Sample_5.html
+++ b/sample/SoraMame_Sample_5.html
@@ -30,8 +30,8 @@
 }
 
 ---くり返し描画する{
-  {赤:マウスX、緑:0、青:マウスY}の背景色
-  {x:150, y:150}に{幅:マウスX, 高さ:マウスY}のマル
+  {赤:@マウスX、緑:0、青:@マウスY}の背景色
+  {x:150, y:150}に{幅:@マウスX, 高さ:@マウスY}のマル
 }
 	</textarea><br />
 	<!--<input type="button" value="字句解析" onclick="soramame_lex()" /> -->
@@ -56,7 +56,7 @@
 var sora;
 var yylval = '';
 var Pjs;
-var commands = new lib_command();	//コマンド置換辞書
+var lib_dic = new lib_dic();	//コマンド置換辞書
 
 function soramame_exec(){
   var Esource = document.getElementById("source");
