--- a/sample/SoraMame_Sample_6.html
+++ b/sample/SoraMame_Sample_6.html
@@ -32,8 +32,8 @@
 ---くり返し描画する{
   {色:255}の背景色
   {幅:3}の輪郭幅
-  {赤:マウスX、緑:0、青:マウスY}の輪郭色
-  {x:150, y:150}に{幅:マウスX, 高さ:マウスY}のマル
+  {赤:@マウスX、緑:0、青:@マウスY}の輪郭色
+  {x:150, y:150}に{幅:@マウスX, 高さ:@マウスY}のマル
 }
 	</textarea><br />
 	<!--<input type="button" value="字句解析" onclick="soramame_lex()" /> -->
@@ -58,7 +58,7 @@
 var sora;
 var yylval = '';
 var Pjs;
-var commands = new lib_command();	//コマンド置換辞書
+var lib_dic = new lib_dic();	//コマンド置換辞書
 
 function soramame_exec(){
   var Esource = document.getElementById("source");
