setup()を、「初期設定する」から変換。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -25,7 +25,7 @@
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
 //マウスの位置にマルを描く
----設定する{
+---初期設定する{
   {幅:250, 高さ:250}のサイズ
 }
 
