--- a/sample/SoraMame_Sample_6.html
+++ b/sample/SoraMame_Sample_6.html
@@ -25,7 +25,7 @@
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
 //マウスの位置に合わせて、輪郭色とサイズを変えてマルを描く
----設定する{
+---初期設定する{
   {幅:300, 高さ:300}のサイズ
 }
 
