関数定義の記号を、トークン：DEF_FUNCとして指定した。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -97,6 +97,9 @@ function soramame_lex(){
     case STRING:
       type = "STRING";
       break;
+	case DEF_FUNC:
+      type = "DEF_FUNC";
+      break;
     case JOSI:
       type = "JOSI";
       break;
