--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -100,6 +100,9 @@ function soramame_lex(){
 	case DEF_FUNC:
       type = "DEF_FUNC";
       break;
+	case DEF_CLASS:
+      type = "DEF_CLASS";
+      break;
     case JOSI:
       type = "JOSI";
       break;
