予約語に、もし・ならば・ちがえば を追加。 ただし、{ }を取りこぼすことがあるなー

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -103,7 +103,16 @@ function soramame_lex(){
 	case DEF_CLASS:
       type = "DEF_CLASS";
       break;
-    case JOSI:
+	case IF:
+      type = "IF";
+      break;
+	case THEN:
+      type = "THEN";
+      break;
+	case ELSE:
+      type = "ELSE";
+      break;
+	case JOSI:
       type = "JOSI";
       break;
     case WORD:
