サンプルを調整

--- a/sample/SoraMame_Sample_9.html
+++ b/sample/SoraMame_Sample_9.html
@@ -25,15 +25,27 @@
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
 //マウスの位置にマルかシカクを描く
+
 ---初期設定する{
   {幅:250, 高さ:250}のサイズ
 }
 
 ---くり返し描画する{
   もし{条件:@マウスX>@幅/2}ならば{
-  　　{x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のマル
-  }ちがえば{
-  　　{x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のシカク
+　　　{赤:255,緑:0,青:0}の塗りつぶし色
+　　　もし {条件:@マウスY>@高さ/2} ならば {
+  　　　　　   {x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のマル
+　　　    } ちがえば {
+  　　　　　   {x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のシカク
+　　　    }
+
+  } ちがえば {
+　　　{赤:0,緑:0,青:255}の塗りつぶし色
+　　　もし {条件:@マウスY>@高さ/2}ならば{
+  　　　　　   {x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のマル
+　　　    } ちがえば {
+  　　　　　   {x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のシカク
+　　　    }
   }
 }
 	</textarea><br />
