データ型を定義するときの変数名を修正。サンプルも修正
間違えてた。

--- a/sample/SoraMame_Sample_10.html
+++ b/sample/SoraMame_Sample_10.html
@@ -25,8 +25,8 @@
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
 //マルの位置を動かす
-@ボールX = @幅 ÷ 2
-@ボールY = @高さ ÷ 2
+@ボールXは整数型 = @幅 ÷ 2
+@ボールYは整数型 = @高さ ÷ 2
 
 ---初期設定する{
   {幅:250, 高さ:250}のサイズ
