ボールが壁で反転するサンプル

--- a/sample/SoraMame_Sample_10.html
+++ b/sample/SoraMame_Sample_10.html
@@ -27,6 +27,8 @@
 //マルの位置を動かす
 @ボールXは整数型 = @幅 ÷ 2
 @ボールYは整数型 = @高さ ÷ 2
+@方向Xは整数型 = 1
+@方向Yは整数型 = 1
 
 ---初期設定する{
   {幅:250, 高さ:250}のサイズ
@@ -35,14 +37,16 @@
 
 ---くり返し描画する{
   {色:0}の背景色
-  @ボールX += 5
-  @ボールY += 3
-  もし{条件:@ボールX >= @幅}ならば{
-　　　@ボールX=0
+  @ボールX += 5 * @方向X
+  もし{条件:@ボールX >= @幅 || @ボールX <= 0}ならば{
+　　　@方向X *= -1
 　}
-  もし{条件:@ボールY >= @高さ}ならば{
-　　　@ボールY=0
+
+  @ボールY += 3 * @方向Y
+  もし{条件:@ボールY >= @高さ || @ボールY <= 0}ならば{
+　　　@方向Y *= -1
 　}
+
   {x:@ボールX, y:@ボールY}に{幅:10, 高さ:10}のマル
 }
 	</textarea><br />
