LOOP命令を追加中。
シンタックスエラーになる

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -112,6 +112,9 @@ function soramame_lex(){
 	case ELSE:
       type = "ELSE";
       break;
+	case LOOP:
+      type = "LOOP";
+      break;
 	case JOSI:
       type = "JOSI";
       break;
