--- a/sample/SoraMame_Sample_9b.html
+++ b/sample/SoraMame_Sample_9b.html
@@ -24,7 +24,7 @@
   <td>
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
-//マルをならべて描く
+//マルをならべて描く（あいだ命令）
 
 ---初期設定する{
   {幅:250, 高さ:250}のサイズ
