変数のデータ型宣言を単独で文(ステートメント)として記述可能にした。
今まで、無理だったのね。

--- a/sample/SoraMame_Sample_10.html
+++ b/sample/SoraMame_Sample_10.html
@@ -24,7 +24,7 @@
   <td>
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
-//マルの位置を動かす
+//マルを動かすアニメーション
 @ボールXは整数型 = @幅 ÷ 2
 @ボールYは整数型 = @高さ ÷ 2
 @方向Xは整数型 = 1
@@ -36,7 +36,7 @@
 }
 
 ---くり返し描画する{
-  {色:0}の背景色
+  フェードアウト
   @ボールX += 5 * @方向X
   もし{条件:@ボールX >= @幅 || @ボールX <= 0}ならば{
 　　　@方向X *= -1
@@ -47,7 +47,14 @@
 　　　@方向Y *= -1
 　}
 
+　{色:255}の塗りつぶし色
   {x:@ボールX, y:@ボールY}に{幅:10, 高さ:10}のマル
+}
+
+---フェードアウト{
+  輪郭なし
+　{色:0, 透明:30}の塗りつぶし色
+  {x:0, y:0, 幅:@幅, 高さ:@高さ}のシカク
 }
 	</textarea><br />
 	<!--<input type="button" value="字句解析" onclick="soramame_lex()" /> -->
