もし命令(IF)をparse.jsyでハードコーディングから、lib_commmand.jsでの指定に変更
ハードコーディングを回避。ただし、THENとELSEはハードコーディングのまま。

--- a/sample/SoraMame_Sample_11.html
+++ b/sample/SoraMame_Sample_11.html
@@ -56,6 +56,15 @@
 　{色:0, 透明:30}の塗りつぶし色
   {x:0, y:0, 幅:@幅, 高さ:@高さ}のシカク
 }
+
+===ボール型{
+   @xは実数型 //位置x
+   @yは実数型 //位置x
+   @dxは実数型 //変化分x
+   @dyは実数型 //変化分y
+
+---{初期位置:@_xは実数型, 初期位置:@_yは実数型,初期速度:@_dxは実数型, 初期速度:@_dyは実数型}のボール型{}
+}
 	</textarea><br />
 	<input type="button" value="字句解析" onclick="soramame_lex()" />
 	<input type="button" value="テスト" onclick="soramame_parse()" />
