字句解析に「新しい」命令を追加
クラス生成用の命令語を追加した。まだパースできない。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -115,6 +115,9 @@ function soramame_lex(){
 	case LOOP:
       type = "LOOP";
       break;
+	case NEW:
+      type = "NEW";
+      break;
 	case JOSI:
       type = "JOSI";
       break;
