--- a/sample/SoraMame_Sample_11.html
+++ b/sample/SoraMame_Sample_11.html
@@ -24,7 +24,7 @@
   <td>
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
-//マルを動かすアニメーション
+//マルを動かすアニメーション（ボール型を定義）
 @ボールXは整数型 = @幅 ÷ 2
 @ボールYは整数型 = @高さ ÷ 2
 @方向Xは整数型 = 1
@@ -58,12 +58,36 @@
 }
 
 ===ボール型{
-   @xは実数型 //位置x
-   @yは実数型 //位置x
-   @dxは実数型 //変化分x
-   @dyは実数型 //変化分y
+   @位置xは実数型
+   @位置yは実数型
+   @速度xは実数型
+   @速度yは実数型
 
----{初期位置:@_xは実数型, 初期位置:@_yは実数型,初期速度:@_dxは実数型, 初期速度:@_dyは実数型}のボール型{}
+---{初期位置:@_xは実数型, 初期位置:@_yは実数型,初期速度:@_dxは実数型, 初期速度:@_dyは実数型}のボール型{
+
+   @位置x = @_x
+   @位置y = @_y
+   @速度x = @_dx
+   @速度y = @_dy
+
+   }
+
+---移動する{
+    @ボールX += 5 * @方向X
+    もし{条件:@ボールX >= @幅 || @ボールX <= 0}ならば{
+　　　@方向X *= -1
+　  }
+
+    @ボールY += 3 * @方向Y
+    もし{条件:@ボールY >= @高さ || @ボールY <= 0}ならば{
+　　　@方向Y *= -1
+　  }
+   }
+
+---描く{
+　   {色:255}の塗りつぶし色
+     {x:@ボールX, y:@ボールY}に{幅:10, 高さ:10}のマル
+   }
 }
 	</textarea><br />
 	<input type="button" value="字句解析" onclick="soramame_lex()" />
