--- a/sample/SoraMame_Sample_11.html
+++ b/sample/SoraMame_Sample_11.html
@@ -25,68 +25,52 @@
   <form name="compiledtext" id="compiledtext" onsubmit="return main()">
 	<textarea id="source" cols="80" rows="20">
 //マルを動かすアニメーション（ボール型を定義）
-@ボールXは整数型 = @幅 ÷ 2
-@ボールYは整数型 = @高さ ÷ 2
-@方向Xは整数型 = 1
-@方向Yは整数型 = 1
 
 ---初期設定する{
   {幅:250, 高さ:250}のサイズ
   輪郭なし
+  @ボール = 新しい{初期位置:@幅÷2, 初期位置:@高さ÷2}のボール型
 }
 
 ---くり返し描画する{
   フェードアウト
-  @ボールX += 5 * @方向X
-  もし{条件:@ボールX >= @幅 || @ボールX <= 0}ならば{
-　　　@方向X *= -1
-　}
-
-  @ボールY += 3 * @方向Y
-  もし{条件:@ボールY >= @高さ || @ボールY <= 0}ならば{
-　　　@方向Y *= -1
-　}
-
-　{色:255}の塗りつぶし色
-  {x:@ボールX, y:@ボールY}に{幅:10, 高さ:10}のマル
+  @ボールを移動する
+  @ボールを描く
 }
 
 ---フェードアウト{
   輪郭なし
-　{色:0, 透明:30}の塗りつぶし色
+  {色:0, 透明:30}の塗りつぶし色
   {x:0, y:0, 幅:@幅, 高さ:@高さ}のシカク
 }
 
 ===ボール型{
    @位置xは実数型
    @位置yは実数型
-   @速度xは実数型
-   @速度yは実数型
+   @方向xは実数型 = 1
+   @方向yは実数型 = 1
 
----{初期位置:@_xは実数型, 初期位置:@_yは実数型,初期速度:@_dxは実数型, 初期速度:@_dyは実数型}のボール型{
+---{初期位置:@_xは実数型, 初期位置:@_yは実数型}のボール型{
 
    @位置x = @_x
    @位置y = @_y
-   @速度x = @_dx
-   @速度y = @_dy
-
    }
 
 ---移動する{
-    @ボールX += 5 * @方向X
-    もし{条件:@ボールX >= @幅 || @ボールX <= 0}ならば{
-　　　@方向X *= -1
+    @位置x += 5 * @方向X
+    もし{条件:@位置x >= @幅 || @位置x <= 0}ならば{
+　　　@方向x *= -1
 　  }
 
-    @ボールY += 3 * @方向Y
-    もし{条件:@ボールY >= @高さ || @ボールY <= 0}ならば{
-　　　@方向Y *= -1
+    @位置y += 3 * @方向Y
+    もし{条件:@位置y >= @高さ || @位置y <= 0}ならば{
+　　　@方向y *= -1
 　  }
    }
 
 ---描く{
 　   {色:255}の塗りつぶし色
-     {x:@ボールX, y:@ボールY}に{幅:10, 高さ:10}のマル
+     {x:@位置x, y:@位置y}に{幅:10, 高さ:10}のマル
    }
 }
 	</textarea><br />
