新しい(NEW)命令を追加したものの、文法構造がイマイチ。改良の途中。
クラス定義とクラスの初期化メソッドの関係を反映できていない。

--- a/sample/SoraMame_Sample_11.html
+++ b/sample/SoraMame_Sample_11.html
@@ -26,6 +26,8 @@
 	<textarea id="source" cols="80" rows="20">
 //マルを動かすアニメーション（ボール型を定義）
 
+@ボールはボール型
+
 ---初期設定する{
   {幅:250, 高さ:250}のサイズ
   輪郭なし
@@ -50,19 +52,19 @@
    @方向xは実数型 = 1
    @方向yは実数型 = 1
 
----{初期位置:@_xは実数型, 初期位置:@_yは実数型}のボール型{
++++{初期位置:@_xは実数型, 初期位置:@_yは実数型}のボール型{
 
    @位置x = @_x
    @位置y = @_y
    }
 
 ---移動する{
-    @位置x += 5 * @方向X
+    @位置x += 5 * @方向x
     もし{条件:@位置x >= @幅 || @位置x <= 0}ならば{
 　　　@方向x *= -1
 　  }
 
-    @位置y += 3 * @方向Y
+    @位置y += 3 * @方向y
     もし{条件:@位置y >= @高さ || @位置y <= 0}ならば{
 　　　@方向y *= -1
 　  }
@@ -70,7 +72,7 @@
 
 ---描く{
 　   {色:255}の塗りつぶし色
-     {x:@位置x, y:@位置y}に{幅:10, 高さ:10}のマル
+    {x:@位置x, y:@位置y}に{幅:10, 高さ:10}のマル
    }
 }
 	</textarea><br />
