クラスの初期化定義の途中
"==="記号が、まだ正規表現エラーになる

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -103,6 +103,9 @@ function soramame_lex(){
 	case DEF_CLASS:
       type = "DEF_CLASS";
       break;
+	case DEF_INIT:
+      type = "DEF_INIT";
+      break;
 	case IF:
       type = "IF";
       break;
