クラス初期化のため、パーサーで「+++」を検出可能にした。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -103,8 +103,8 @@ function soramame_lex(){
 	case DEF_CLASS:
       type = "DEF_CLASS";
       break;
-	case DEF_INIT:
-      type = "DEF_INIT";
+	case DEF_CLASS_INIT:
+      type = "DEF_CLASS_INIT";
       break;
 	case IF:
       type = "IF";
