字句解析で、助詞を分類する（JOSI,JOSI_HA,JOSI_NO,JOSI_WO）
用途によって、助詞を使い分けるため。HA=データ型、NO=プロパティ、WO=メソッド

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -124,6 +124,15 @@ function soramame_lex(){
 	case JOSI:
       type = "JOSI";
       break;
+	case JOSI_HA:
+      type = "JOSI_HA";
+      break;
+	case JOSI_NO:
+      type = "JOSI_NO";
+      break;
+	case JOSI_WO:
+      type = "JOSI_WO";
+      break;
     case WORD:
       type = "WORD";
       break;
