--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -37,8 +37,10 @@
 	<input type="button" value="へんかん" onclick="soramame_parse()" />
 	<input type="button" value="うごかす" onclick="soramame_exec()" />
 	<input type="button" value="とめる" onclick="soramame_stop()" />
+	<br />
 	<input type="file" id="myFile" onchange="file_open()" />
-	<a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target='_blannk'>ヘルプ?</a>
+	[<a href="#" id="download-link" >ほぞん</a>]
+	[<a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target='_blannk'>ヘルプ?</a>]
   </form>
   </td>
   </tr></tbody></table>  
@@ -187,6 +189,14 @@ function file_open() {
 	reader.readAsText(fileData, "utf-8"); // 文字コードをUTF-8として読み込む
 }
 
+//テキストファイルを保存する
+window.onload = function() {
+	document.getElementById("download-link").addEventListener("click", function(){
+		var value = document.getElementById("source").innerHTML;
+		var href = "data:application/octet-stream," + encodeURIComponent(value);
+		this.setAttribute("href", href);
+	}, false);
+}
 //-->
 </script>
 
