実行エリアのサイズを調整。 輪郭幅を太く 動きのパラメータを調整
デモの見栄えをよくしてみた

--- a/sample/SoraMame_Sample_20.html
+++ b/sample/SoraMame_Sample_20.html
@@ -26,22 +26,23 @@
 	<textarea id="source" cols="80" rows="20">
 //ボイド：生き物の群れのように動き回るボール
 
-@最大速度は実数型 = 4
-@半径は実数型 = 5
+@最大速度は実数型 = 5
+@半径は実数型 = 10
 @ボイド数は整数型 = 10
 @ボイドはボイド型[] = 新しいボイド型[@ボイド数]
 
-@p1は実数型 = 1    // パラメータ：群れの中心に向かう度合
-@p2は実数型 = 0.8  // パラメータ：仲間を避ける度合
+@p1は実数型 = 0.8    // パラメータ：群れの中心に向かう度合
+@p2は実数型 = 5  // パラメータ：仲間を避ける度合
 @p3は実数型 = 0.1  // パラメータ：群れの平均速度に合わせる度合
 
-@求心力は整数型 = 300
-@距離境界は整数型 = 15
+@求心力は整数型 = 100
+@距離境界は整数型 = 30
 
 ---初期設定する{
-  {幅:250, 高さ:250}のサイズ
+  {幅:300, 高さ:300}のサイズ
   {ミリ秒:20}のコマ数
   塗りつぶしなし
+　{幅：2}の輪郭幅
   {色:255}の輪郭色
   
   @間隔は実数型 = @幅 / @ボイド数
