もし命令のサンプルをアップデート
「ちがえば もし」命令の実装に合わせて

--- a/sample/SoraMame_Sample_9.html
+++ b/sample/SoraMame_Sample_9.html
@@ -40,10 +40,12 @@
 　　　}
 
   } ちがえば {
-　　　もし {条件:@マウスY>@高さ/2}ならば{
-　　　    {赤:255,緑:0,青:0}の塗りつぶし色
-　　　} ちがえば {
+　　　もし {条件:@マウスY>200}ならば{
 　　　    {赤:255,緑:255,青:255}の塗りつぶし色
+　　　} ちがえば もし{条件:@マウスY>100}ならば{
+　　　    {赤:255,緑:0,青:0}の塗りつぶし色
+    } ちがえば {
+　　　    {赤:0,緑:0,青:0}の塗りつぶし色
 　　　}
   }
   {x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のマル
