サンプルの引数形式を変更

--- a/sample/SoraMame_Sample_30.html
+++ b/sample/SoraMame_Sample_30.html
@@ -35,16 +35,16 @@
 @Xは整数型 = 30
 
 {色:20}の塗りつぶし色
-{文字:「古池や」, x:@X, y:40}でもじ表示する
+{文字:「古池や」｝で{x:@X, y:40}にもじ表示する
 
 {色:180}の塗りつぶし色
-{文字:「蛙飛び込む」, x:@X, y:80}でもじ表示する
+{文字:「蛙飛び込む」｝で{x:@X, y:80}にもじ表示する
 
 {色:210}の塗りつぶし色
-{文字:「水の音」, x:@X, y:120}でもじ表示する
+{文字:「水の音」｝で{x:@X, y:120}にもじ表示する
 
 {色:250}の塗りつぶし色
-{文字:「芭蕉」, x:@X, y:200}でもじ表示する
+{文字:「芭蕉」｝で{x:@X, y:200}にもじ表示する
 
 </textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
