書体を扱うデータ型名を変更
ほかと合わせて、あたまにPをつける

--- a/sample/SoraMame_Sample_30.html
+++ b/sample/SoraMame_Sample_30.html
@@ -29,7 +29,7 @@
 {幅:250, 高さ:250}のサイズ
 {色:102}の背景色
 
-@フォントAはフォント型 = {フォント:「Arial」}でフォント読み込みする
+@フォントAはPフォント型 = {フォント:「Arial」}でフォント読み込みする
 {フォント:@フォントA, サイズ:32}でフォント設定する
 
 @Xは整数型 = 30
