もじ表示サンプルを修正
日本語のフォント指定方法が判明したので、それを盛り込む。

--- a/sample/SoraMame_Sample_30.html
+++ b/sample/SoraMame_Sample_30.html
@@ -26,25 +26,29 @@
 	<textarea id="source" cols="80" rows="20">
 //ことばを表示
 
-{幅:250, 高さ:250}のサイズ
+{幅:300, 高さ:300}のサイズ
 {色:102}の背景色
 
-@フォントAはPフォント型 = {フォント:「Arial」}でフォント読み込みする
-{フォント:@フォントA, サイズ:32}でフォント設定する
+@フォントAはPフォント型 = {フォント:「serif」}でフォント読み込みする
+{フォント:@フォントA, サイズ:48}でフォント設定する
 
 @Xは整数型 = 30
 
 {色:20}の塗りつぶし色
-{文字:「古池や」｝で{x:@X, y:40}にもじ表示する
+{文字:「古池や」｝で{x:@X, y:80}にもじ表示する
 
 {色:180}の塗りつぶし色
-{文字:「蛙飛び込む」｝で{x:@X, y:80}にもじ表示する
+{文字:「蛙飛び込む」｝で{x:@X, y:140}にもじ表示する
 
 {色:210}の塗りつぶし色
-{文字:「水の音」｝で{x:@X, y:120}にもじ表示する
+{文字:「水の音」｝で{x:@X, y:200}にもじ表示する
+
+
+@フォントA = {フォント:「sans-serif」}でフォント読み込みする
+{フォント:@フォントA, サイズ:32}でフォント設定する
 
 {色:250}の塗りつぶし色
-{文字:「芭蕉」｝で{x:@X, y:200}にもじ表示する
+{文字:「芭蕉」｝で{x:@X, y:250}にもじ表示する
 
 </textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
