星の方向と速度を毎回変更

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -64,9 +64,7 @@
 
 //コンストラクタ
 +++星型{
-	@角度 = 0 //{上限:2*@PI}の乱数
-	@距離 = 0.9 //{上限:1}の乱数
-	@経過時間 = 0
+	初期化する
     }
 
 ---移動する{
@@ -77,8 +75,14 @@
 	@y = @表示距離 * {角度:@角度}でSin
 
 	もし{条件:@経過時間 > 1}ならば{
-		@経過時間 = 0
+		初期化する
 	}
+    }
+
+---初期化する{
+	@角度 = {上限:@TWO_PI}の乱数
+	@距離 = {上限:1}の乱数
+	@経過時間 = 0
     }
 }
 	</textarea><br />
