複数の星が飛ぶようにした。

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -28,29 +28,30 @@
 //Copyright 2012 Yutaka Kachi
 //MIT License
 
-@速度は実数型 = 0.01
-@星1は星型
+@速度は実数型 = 0.02
+@星数は整数型 = 100
+
+@星0は星型[] = 新しい星型[@星数]
 
 ---初期設定する{
 	{幅:300, 高さ:300}のサイズ
 	{ミリ秒:20}のコマ数
 
-	@星1 = 新しい星型
+	{開始:@iは整数型 = 0, 条件:@i < @星数, 変化:@i+=1}のくりかえし{
+		@星0[@i] = 新しい星型
+	}
 }
 
 ---くり返し描画する{
 	{色:0}の背景色
-	@xxは実数 = @星1の@x * @幅 / 2 + @幅 / 2
-	@yyは実数 = @星1の@y * @高さ / 2 + @高さ / 2
-	{x:@xx, y:@yy}に{幅:5, 高さ:5}のマル
 
-	{文字:@星1の@角度}で{x:10, y:10}にもじ表示する
-	{文字:@星1の@距離}で{x:50, y:10}にもじ表示する
-	{文字:@星1の@x}で{x:10, y:20}にもじ表示する
-	{文字:@星1の@y}で{x:50, y:20}にもじ表示する
-	{文字:@星1の@経過時間}で{x:100, y:20}にもじ表示する
+	{開始:@iは整数型 = 0, 条件:@i < @星数, 変化:@i+=1}のくりかえし{
+		@xxは実数 = @星0[@i]の@x * @幅 / 2 + @幅 / 2
+		@yyは実数 = @星0[@i]の@y * @高さ / 2 + @高さ / 2
+		{x:@xx, y:@yy}に{幅:5, 高さ:5}のマル
 
-	@星1を移動する
+		@星0[@i]を移動する
+	}
 }
 
 ===星型{
@@ -82,7 +83,7 @@
 ---初期化する{
 	@角度 = {上限:@TWO_PI}の乱数
 	@距離 = {上限:1}の乱数
-	@経過時間 = 0
+	@経過時間 = {上限:0.8}の乱数
     }
 }
 	</textarea><br />
