マウスの操作方向を変更。星の数とスピードを調整。
見栄えがよくなったかな。

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -28,8 +28,8 @@
 //Copyright 2012 Yutaka Kachi
 //MIT License
 
-@速度は実数型 = 0.02
-@星数は整数型 = 100
+@速度は実数型 = 0.01
+@星数は整数型 = 200
 
 @星0は星型[] = 新しい星型[@星数]
 
@@ -46,8 +46,8 @@
 	{色:0}の背景色
 
 	{開始:@iは整数型 = 0, 条件:@i < @星数, 変化:@i+=1}のくりかえし{
-		@xxは実数 = @星0[@i]の@x * @幅 / 2 + @マウスx
-		@yyは実数 = @星0[@i]の@y * @高さ / 2 + @マウスy
+		@xxは実数 = @星0[@i]の@x * @幅 / 2 + (@幅 - @マウスx)
+		@yyは実数 = @星0[@i]の@y * @高さ / 2 + (@高さ - @マウスy)
 		{x:@xx, y:@yy}に{幅:5, 高さ:5}のマル
 
 		@星0[@i]を移動する
