画面に大きなマルを追加
レーダー風のデザインに変更。
古典的なスペースワープでは、見栄えがしない。

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -33,9 +33,17 @@
 
 @星0は星型[] = 新しい星型[@星数]
 
+@中心xは整数型
+@中心yは整数型
+@サークル半径は整数型 = 145
+
+
 ---初期設定する{
 	{幅:300, 高さ:300}のサイズ
 	{ミリ秒:20}のコマ数
+
+	@中心x = @幅 / 2
+	@中心y = @高さ / 2
 
 	{開始:@iは整数型 = 0, 条件:@i < @星数, 変化:@i+=1}のくりかえし{
 		@星0[@i] = 新しい星型
@@ -43,15 +51,29 @@
 }
 
 ---くり返し描画する{
-	{色:0}の背景色
+	{色:255}の背景色
+	サークル描く
 
 	{開始:@iは整数型 = 0, 条件:@i < @星数, 変化:@i+=1}のくりかえし{
 		@xxは実数 = @星0[@i]の@x * @幅 / 2 + (@幅 - @マウスx)
 		@yyは実数 = @星0[@i]の@y * @高さ / 2 + (@高さ - @マウスy)
-		{x:@xx, y:@yy}に{幅:5, 高さ:5}のマル
+
+		{色:255}の塗りつぶし色
+		輪郭なし
+		{x:@xx, y:@yy}に{幅:3, 高さ:3}のマル
 
 		@星0[@i]を移動する
 	}
+}
+
+---サークル描く{
+	{色:0}の塗りつぶし色
+	輪郭なし
+	{x:@中心x, y:@中心y}に{幅:(@サークル半径 * 2 - 10),高さ:(@サークル半径 * 2 - 10)}のマル
+
+	塗りつぶしなし
+	{色:0}の輪郭色
+	{x:@中心x, y:@中心y}に{幅:@サークル半径 * 2,高さ:@サークル半径 * 2}のマル
 }
 
 ===星型{
@@ -77,7 +99,7 @@
 
 	もし{条件:@経過時間 > 1}ならば{
 		初期化する
-	}
+	  }
     }
 
 ---初期化する{
