メッセージ表示を追加した
さらに見栄えをアップ。

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -28,8 +28,8 @@
 //Copyright 2012 Yutaka Kachi
 //MIT License
 
-@速度は実数型 = 0.01
-@星数は整数型 = 200
+@速度は実数型 = 0.02
+@星数は整数型 = 300
 
 @星0は星型[] = 新しい星型[@星数]
 
@@ -64,6 +64,7 @@
 
 		@星0[@i]を移動する
 	}
+	メッセージ描く
 }
 
 ---サークル描く{
@@ -97,16 +98,23 @@
 	@x = @表示距離 * {角度:@角度}でCos
 	@y = @表示距離 * {角度:@角度}でSin
 
-	もし{条件:@経過時間 > 1}ならば{
+	もし{条件:@経過時間 > 1.5}ならば{
 		初期化する
 	  }
     }
 
 ---初期化する{
 	@角度 = {上限:@TWO_PI}の乱数
-	@距離 = {上限:1}の乱数
-	@経過時間 = {上限:0.8}の乱数
+	@距離 = {上限:0.8}の乱数
+	@経過時間 = {上限:1.3}の乱数
     }
+}
+
+---メッセージ描く{
+	{色:0}の塗りつぶし色
+	{テキスト:「SPACE WARP」}で{x:5, y:10}にもじ表示する
+	{テキスト:@星0[1]の@角度}で{x:5, y:25}にもじ表示する
+	{テキスト:@星0[1]の@経過時間}で{x:40, y:25}にもじ表示する
 }
 	</textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
