三角マーカーを追加
かっこいい！

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -35,7 +35,7 @@
 
 @中心xは整数型
 @中心yは整数型
-@サークル半径は整数型 = 145
+@サークル半径は整数型 = 130
 
 
 ---初期設定する{
@@ -64,6 +64,8 @@
 
 		@星0[@i]を移動する
 	}
+	{位置:@マウスx, 範囲:@幅}で三角マーカー
+	{位置:(@幅 - @マウスy), 範囲:@高さ}で三角マーカー
 	メッセージ描く
 }
 
@@ -115,6 +117,24 @@
 	{テキスト:「SPACE WARP」}で{x:5, y:10}にもじ表示する
 	{テキスト:@星0[1]の@角度}で{x:5, y:25}にもじ表示する
 	{テキスト:@星0[1]の@経過時間}で{x:40, y:25}にもじ表示する
+}
+
+---{位置:@xは実数型, 範囲:@lは実数型}で三角マーカー{
+
+	@角度xは実数型 = @x / @l * @TWO_PI
+
+	@円周1xは実数型 = (@サークル半径 + 2) * {角度:@角度x}のSin + @中心x
+	@円周1yは実数型 = (@サークル半径 + 2) * {角度:@角度x}のCos + @中心y
+
+	@頂点1axは実数型 = (@サークル半径 + 10) * {角度:(@角度x + @PI / 36)}のSin + @中心x
+	@頂点1ayは実数型 = (@サークル半径 + 10) * {角度:(@角度x + @PI / 36)}のCos + @中心x
+
+	@頂点1bxは実数型 = (@サークル半径 + 10) * {角度:(@角度x - @PI / 36)}のSin + @中心x
+	@頂点1byは実数型 = (@サークル半径 + 10) * {角度:(@角度x - @PI / 36)}のCos + @中心x
+
+	{色:255}の塗りつぶし色
+	{色:0}の輪郭色
+	{x:@円周1x, y:@円周1y}と{x:@頂点1ax, y:@頂点1ay}と{x:@頂点1bx, y:@頂点1by}とサンカク
 }
 	</textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
