スペースワープのパラメータを調整。 あと、ボイドサンプルをデモに移動。

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -28,7 +28,7 @@
 //Copyright 2012 Yutaka Kachi
 //MIT License
 
-@速度は実数型 = 0.02
+@速度は実数型 = 0.005
 @星数は整数型 = 300
 
 @星0は星型[] = 新しい星型[@星数]
@@ -51,6 +51,7 @@
 }
 
 ---くり返し描画する{
+	//{色:0}の背景色
 	{色:255}の背景色
 	サークル描く
 
@@ -60,7 +61,7 @@
 
 		{色:255}の塗りつぶし色
 		輪郭なし
-		{x:@xx, y:@yy}に{幅:3, 高さ:3}のマル
+		{x:@xx, y:@yy}に{幅:2, 高さ:2}のマル
 
 		@星0[@i]を移動する
 	}
@@ -100,15 +101,15 @@
 	@x = @表示距離 * {角度:@角度}でCos
 	@y = @表示距離 * {角度:@角度}でSin
 
-	もし{条件:@経過時間 > 1.5}ならば{
+	もし{条件:(@x < -2) || (@x > 2) || (@y > 2) || (@y < -2)}ならば{
 		初期化する
 	  }
     }
 
 ---初期化する{
 	@角度 = {上限:@TWO_PI}の乱数
-	@距離 = {上限:0.8}の乱数
-	@経過時間 = {上限:1.3}の乱数
+	@距離 = {上限:1}の乱数
+	@経過時間 = 0.1
     }
 }
 
